@@ -104,7 +104,7 @@ class FeedFetcherTest extends \OCA\AppFramework\Utility\TestUtility {
 		$this->url = 'tests';
 
 		$this->permalink = 'http://permalink';
-		$this->title = 'my title&lt;';
+		$this->title = 'my title&amp;lt;';
 		$this->guid = 'hey guid here';
 		$this->body = 'let the bodies hit the floor <a href="test">test</a>';
 		$this->body2 = 'let the bodies hit the floor <a target="_blank" href="test">test</a>';
@@ -196,7 +196,7 @@ class FeedFetcherTest extends \OCA\AppFramework\Utility\TestUtility {
 		$item->setStatus(0);
 		$item->setUnread();
 		$item->setUrl($this->permalink);
-		$item->setTitle(html_entity_decode($this->title));
+		$item->setTitle(html_entity_decode(html_entity_decode($this->title)));
 		$item->setGuid($this->guid);
 		$item->setGuidHash(md5($this->guid));
 		$item->setBody($this->body2);
